workloads/data-platform/kafka/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kafka-ui
  namespace: data-streaming
spec:
  ingressClassName: nginx
  rules:
    - host: kafka-ui.platform-lab.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kafka-ui
                port:
                  number: 80
